# blackerbox

./: .env.example  .gitignore  README.md
blackbox-cli/cmd/: models.go  root.go
blackbox-cli/internal/client/: client.go
blackbox-cli/internal/model/: snapshot.go
blackbox-cli/internal/ui/: dashboard.go  input.go  render.go
blackbox-cli/internal/utils/: logger.go
blackbox-dashboard/: api.py  database.py  pyproject.toml  requirements.txt
blackbox-dashboard/static/: index.html
blackbox-server/: CMakeLists.txt  README.md  blackbox-server_1.0.0.deb  test_nvidia_apis.cpp
blackbox-server/blackbox-server_1.0.0/DEBIAN/: control
blackbox-server/debian/: control
blackbox-server/docs/: API.md
blackbox-server/include/: vram_types.h
blackbox-server/include/services/: deploy_service.h  hf_deploy.h  model_manager.h  optimization_service.h  spindown_service.h  vllm_client.h  vram_tracker.h
blackbox-server/include/utils/: json_parser.h  json_serializer.h
blackbox-server/py_script/: parse_vram.py
blackbox-server/scripts/: build_deb_manual.sh  build_test.sh  chat_qwen.py  fix_firewall.sh  install_deps.sh  install_from_github.sh  parse_vram.py
blackbox-server/src/: http_server.cpp  json_serializer.cpp  main.cpp  nsight_utils.cpp  nvml_utils.cpp  vllm_client.cpp
blackbox-server/src/configs/: A100.yaml  H100.yaml  L40.yaml  T4.yaml
blackbox-server/src/infra/: http_server.cpp  main.cpp
blackbox-server/src/services/: aggregation_service.cpp  deploy_service.cpp  hf_deploy.cpp  model_manager.cpp  nvml_utils.cpp  optimization_service.cpp  spindown_service.cpp  vllm_client.cpp
blackbox-server/src/utils/: env_utils.cpp  json_parser.cpp  json_serializer.cpp
docs/: INTERACTIVE_CHARTS.md  SSE_API.md
scripts/: common.sh  test_sse.go
scripts/py_script/: chat.py  parse_vram.py
scripts/sh_script/: deploy_model.sh  list_deployed.sh  models_example.txt  undeploy_model.sh
